--- a/package.json
+++ b/package.json
@@ -1,13 +1,4 @@
 {
-	"name": "@robertakarobin/util",
-	"version": "0.0.2",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/RobertAKARobin/util"
-	},
-	"scripts": {
-		"lint": "eslint ."
-	},
 	"dependencies": {
 		"@typescript-eslint/eslint-plugin": "^5.40.0",
 		"@typescript-eslint/parser": "^5.40.0",
@@ -20,5 +11,14 @@
 	},
 	"devDependencies": {
 		"husky": "^8.0.1"
-	}
+	},
+	"name": "@robertakarobin/util",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/RobertAKARobin/util"
+	},
+	"scripts": {
+		"lint": "eslint ."
+	},
+	"version": "0.0.3"
 }
