--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 		"@typescript-eslint/eslint-plugin": "^5.40.0",
 		"@typescript-eslint/parser": "^5.40.0",
 		"eslint": "^8.25.0",
+		"eslint-plugin-typescript-sort-keys": "^2.1.0",
 		"postcss-html": "^1.5.0",
 		"stylelint": "^14.13.0",
 		"stylelint-config-standard": "^28.0.0",
@@ -20,5 +21,5 @@
 	"scripts": {
 		"lint": "eslint ."
 	},
-	"version": "0.0.3"
+	"version": "0.0.4"
 }
