--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,11 @@
 {
 	"eslint.options": {
-		"extensions": [".js", ".json", ".ts", ".vue"]
+		"extensions": [".js", ".json", ".ts"]
 	},
 	"eslint.enable": true,
 	"eslint.validate": [
 		"javascript",
 		"json",
-		"jsonc",
 		"typescript"
 	]
 }
