--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
 			}
 		],
 		"@typescript-eslint/semi": ["warn", "always"],
+		"@typescript-eslint/space-before-function-paren": ["warn", "never"],
 		"comma-dangle": ["warn", "always-multiline"],
 		"curly": ["warn", "all"],
 		"indent": ["warn", "tab", {
@@ -63,7 +64,6 @@
 			}
 		],
 		"space-before-blocks": ["warn", "always"],
-		"space-before-function-paren": ["warn", "never"],
 		"space-in-parens": ["warn"],
 		"space-infix-ops": ["warn"],
 		"typescript-sort-keys/interface": "warn",
