--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,6 @@
 // Not using Prettier because too much of a PITA, especially when supporting .astro files and VSCode
 // TODO3: Stylelistic rules are deprecated. Migrate to Prettier when it's less of a PITA: https://typescript-eslint.io/rules/comma-dangle/
+// TODO3: Rule for requiring parens around ternaries
 {
 	"extends": [
 		"eslint:recommended",
