--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,9 +20,19 @@
 				"comma-dangle": ["warn", "never"],
 				"quotes": ["warn", "double"]
 			}
+		},
+		{
+			"excludedFiles": ["*.test.ts", "*.spec.ts"],
+			"extends": [
+				"plugin:@typescript-eslint/recommended-requiring-type-checking"
+			],
+			"files": ["*.ts", "*.tsx"],
+			"parser": "@typescript-eslint/parser",
+			"parserOptions": {
+				"project": ["./tsconfig.json"]
+			}
 		}
 	],
-	"parser": "@typescript-eslint/parser",
 	"plugins": [
 		"@typescript-eslint",
 		"typescript-sort-keys"
