--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
 	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "^5.40.0",
-		"@typescript-eslint/parser": "^5.40.0",
-		"eslint": "^8.25.0",
-		"eslint-plugin-typescript-sort-keys": "^2.1.0",
+		"@types/node": "^20.5.9",
+		"@typescript-eslint/eslint-plugin": "^6.6.0",
+		"@typescript-eslint/parser": "^6.6.0",
+		"eslint": "^8.48.0",
+		"eslint-plugin-typescript-sort-keys": "^3.0.0",
 		"postcss-html": "^1.5.0",
-		"stylelint": "^14.13.0",
-		"stylelint-config-standard": "^28.0.0",
-		"stylelint-config-standard-scss": "^5.0.0",
-		"stylelint-order": "^5.0.0"
+		"stylelint": "^15.10.3",
+		"stylelint-config-standard": "^34.0.0",
+		"stylelint-config-standard-scss": "^11.0.0",
+		"stylelint-order": "^6.0.3",
+		"typescript": "^5.2.2"
 	},
 	"devDependencies": {
-		"husky": "^8.0.1"
+		"colors": "^1.4.0",
+		"husky": "^8.0.3"
 	},
 	"name": "@robertakarobin/util",
 	"repository": {
@@ -19,7 +22,9 @@
 		"url": "https://github.com/RobertAKARobin/util"
 	},
 	"scripts": {
-		"lint": "eslint . --max-warnings=0"
+		"lint": "eslint . --max-warnings=0",
+		"spec": "cd spec && npm run spec"
 	},
-	"version": "0.0.18"
+	"type": "module",
+	"version": "0.0.155"
 }
