Update readme and ignore package.json in eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
 	"ignorePatterns": [
 		"dist/**",
 		"!**/.*.json",
+		"**/package.json",
 		"**/package-lock.json",
 		"**/node_modules/**"
 	],
