--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
 	"eslint.validate": [
 		"javascript",
 		"json",
+		"jsonc",
 		"typescript"
 	],
 	"typescript.tsdk": "node_modules/typescript/lib",
