--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,7 @@
 		{
 			"files": "*.js",
 			"rules": {
+				"@typescript-eslint/explicit-member-accessibility": "off",
 				"@typescript-eslint/no-var-requires": "off"
 			}
 		},
@@ -41,17 +42,48 @@
 				"project": true
 			},
 			"rules": {
-				"@typescript-eslint/member-delimiter-style": ["error",
-					{
-						"singleline": {
-							"requireLast": true
-						}
+				"@typescript-eslint/explicit-member-accessibility": ["error", {
+					"accessibility": "no-public"
+				}],
+				"@typescript-eslint/member-delimiter-style": ["error", {
+					"singleline": {
+						"requireLast": true
 					}
-				],
-				"@typescript-eslint/member-ordering": "error",
+				}],
+				"@typescript-eslint/member-ordering": ["error", {
+					"default": {
+						"memberTypes": [
+							"signature",
+							"call-signature",
+
+							["static-field", "static-get", "static-set"],
+							"static-initialization",
+							"static-method",
+
+							[
+								"abstract-field",
+								"abstract-get",
+								"abstract-set",
+								"instance-field",
+								"instance-get",
+								"instance-set"
+							],
+							"constructor",
+							["abstract-method", "instance-method"]
+						],
+						"order": "natural-case-insensitive"
+					}
+				}],
 				"@typescript-eslint/no-empty-interface": "off",
+				"@typescript-eslint/no-explicit-any": "error",
 				"@typescript-eslint/no-unnecessary-type-assertion": "warn",
-				"@typescript-eslint/no-unused-vars": "warn",
+				"@typescript-eslint/no-unsafe-argument": "warn",
+				"@typescript-eslint/no-unsafe-assignment": "warn",
+				"@typescript-eslint/no-unsafe-call": "warn",
+				"@typescript-eslint/no-unsafe-member-access": "warn",
+				"@typescript-eslint/no-unused-vars": ["error", {
+					"argsIgnorePattern": "^_"
+				}],
 				"@typescript-eslint/semi": ["error", "always"],
 				"@typescript-eslint/space-before-function-paren": ["error", "never"],
 				"@typescript-eslint/unbound-method": [
@@ -87,7 +119,9 @@
 			"ignoreStrings": false,
 			"ignoreTemplateLiterals": true
 		}],
-		"no-unused-vars": "warn",
+		"no-unused-vars": ["error", {
+			"argsIgnorePattern": "^_"
+		}],
 		"object-curly-spacing": ["error", "always"],
 		"quote-props": ["error", "consistent"],
 		"quotes": ["error", "backtick"],
