--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"husky": "^8.0.3",
 		"tsx": "^3.13.0"
 	},
+	"main": "index.ts",
 	"name": "@robertakarobin/util",
 	"repository": {
 		"type": "git",
@@ -24,7 +25,8 @@
 	},
 	"scripts": {
 		"lint": "eslint .",
-		"spec": "tsx index.spec.ts"
+		"spec": "tsx index.spec.ts",
+		"test": "npm run lint && npm run spec"
 	},
 	"type": "module",
 	"version": "0.0.166"
