--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,9 @@
 				"project": true
 			},
 			"rules": {
+				"@typescript-eslint/array-type": ["error", {
+					"default": "generic"
+				}],
 				"@typescript-eslint/explicit-member-accessibility": ["error", {
 					"accessibility": "no-public"
 				}],
