--- a/spec/package.json
+++ b/spec/package.json
@@ -1,8 +1,9 @@
 {
 	"dependencies": {
-		"@robertakarobin/util": "file:.."
+		"@robertakarobin/jsutil": "file:../jsutil"
 	},
 	"devDependencies": {
+		"@robertakarobin/util": "file:..",
 		"@types/diff": "^5.0.5",
 		"diff": "^5.1.0",
 		"tsx": "^3.12.10"
