--- a/eslint-config-ts/package.json
+++ b/eslint-config-ts/package.json
@@ -1,9 +1,9 @@
 {
 	"dependencies": {
+		"@robertakarobin/eslint-config": "file:../eslint-config",
 		"@types/node": "^20.8.4",
 		"@typescript-eslint/eslint-plugin": "^6.7.5",
 		"@typescript-eslint/parser": "^6.7.5",
-		"eslint": "^8.51.0",
 		"eslint-plugin-typescript-sort-keys": "^3.0.0"
 	},
 	"main": "index.cjs",
