--- a/eslint-config/package.json
+++ b/eslint-config/package.json
@@ -1,6 +1,7 @@
 {
 	"dependencies": {
-		"eslint": "^8.51.0"
+		"eslint": "^8.51.0",
+		"eslint-plugin-import-quotes": "^0.0.1"
 	},
 	"main": "index.cjs",
 	"name": "@robertakarobin/eslint-config",
