mv tsconfig to eslint-config-ts

--- a/emit/package.json
+++ b/emit/package.json
@@ -1,7 +1,6 @@
 {
 	"devDependencies": {
-		"@robertakarobin/spec": "file:../spec",
-		"@robertakarobin/util": "file:.."
+		"@robertakarobin/spec": "file:../spec"
 	},
 	"main": "index.ts",
 	"name": "@robertakarobin/emit",
