--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,8 @@
 {
 	"compilerOptions": {
-		"allowImportingTsExtensions": true,
-		"allowJs": true,
-		"baseUrl": ".",
-		"lib": ["ESNext", "DOM"],
-		"module": "ESNext",
-		"moduleResolution": "bundler",
-		"noEmit": true,
-		"outDir": "dist",
-		"resolveJsonModule": true,
-		"strict": true,
-		"target": "ESNext"
-	}
+		"baseUrl": "."
+	},
+	"extends": [
+		"@robertakarobin/eslint-config-ts"
+	]
 }
