--- a/csslint/.stylelintrc.json
+++ b/csslint/.stylelintrc.json
@@ -1,8 +1,5 @@
 {
 	"extends": "stylelint-config-standard",
-	"ignoreFiles": [
-		"node_modules/**"
-	],
 	"overrides": [
 		{
 			"customSyntax": "postcss-html",
@@ -11,7 +8,10 @@
 			]
 		}
 	],
-	"plugins": ["stylelint-order"],
+	"plugins": [
+		"stylelint-order",
+		"stylelint-stylistic"
+	],
 	"rules": {
 		"alpha-value-notation": "number",
 		"at-rule-empty-line-before": null,
