--- a/csslint/package.json
+++ b/csslint/package.json
@@ -3,7 +3,8 @@
 		"postcss-html": "^1.5.0",
 		"stylelint": "^15.10.3",
 		"stylelint-config-standard": "^34.0.0",
-		"stylelint-order": "^6.0.3"
+		"stylelint-order": "^6.0.3",
+		"stylelint-stylistic": "^0.4.3"
 	},
 	"name": "@robertakarobin/csslint",
 	"version": "0.0.1"
