--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"devDependencies": {
 		"@robertakarobin/component": "file:./component",
+		"@robertakarobin/csslint": "file:./csslint",
 		"@robertakarobin/emit": "file:./emit",
 		"@robertakarobin/eslint-config-ts": "file:./eslint-config-ts",
 		"@robertakarobin/spec": "file:./spec",
@@ -23,8 +24,9 @@
 	},
 	"scripts": {
 		"dev:async": "tsx watch component/example/async.ts",
-		"lint": "eslint .",
+		"lint": "eslint . && stylelint",
 		"spec": "tsx index.spec.ts",
+		"stylelint": "stylelint **/*.css --quietDeprecationWarnings",
 		"test": "npm run lint && npm run spec"
 	},
 	"type": "module",
