--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,5 +1,5 @@
 {
-	"extends": "@robertakarobin/csslint/.stylelintrc.json",
+	"extends": "@robertakarobin/csslint",
 	"ignoreFiles": [
 		"**/dist/*",
 		"**/node_modules/*"
