--- a/eslint-config-ts/package.json
+++ b/eslint-config-ts/package.json
@@ -6,7 +6,6 @@
 		"@typescript-eslint/parser": "^6.8.0",
 		"eslint-plugin-typescript-sort-keys": "^3.1.0"
 	},
-	"main": "index.cjs",
-	"name": "@robertakarobin/eslint-config-ts",
-	"type": "module"
+	"main": "index.js",
+	"name": "@robertakarobin/eslint-config-ts"
 }
