--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"url": "https://github.com/RobertAKARobin/util"
 	},
 	"scripts": {
-		"dev:csr": "tsx watch web/example/server-csr.ts",
+		"dev:csr": "tsx watch web/example/build-csr.ts",
 		"lint": "eslint . && npm run stylelint",
 		"spec": "tsx index.spec.ts",
 		"stylelint": "stylelint **/*.css --quietDeprecationWarnings",
