Add emitter ref

--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
+		"@robertakarobin/emit": "file:../emit",
 		"@robertakarobin/jsutil": "file:../jsutil"
 	},
 	"devDependencies": {
