--- a/eslint-config-ts/package.json
+++ b/eslint-config-ts/package.json
@@ -1,11 +1,12 @@
 {
 	"dependencies": {
 		"@robertakarobin/eslint-config": "file:../eslint-config",
-		"@types/node": "^20.8.7",
-		"@typescript-eslint/eslint-plugin": "^6.8.0",
-		"@typescript-eslint/parser": "^6.8.0",
+		"@types/node": "^20.8.8",
+		"@typescript-eslint/eslint-plugin": "^6.9.0",
+		"@typescript-eslint/parser": "^6.9.0",
 		"eslint-plugin-typescript-sort-keys": "^3.1.0"
 	},
 	"main": "index.js",
-	"name": "@robertakarobin/eslint-config-ts"
+	"name": "@robertakarobin/eslint-config-ts",
+	"version": "0.0.1"
 }
