--- a/eslint-config/package.json
+++ b/eslint-config/package.json
@@ -1,9 +1,10 @@
 {
 	"dependencies": {
-		"eslint": "^8.51.0",
-		"eslint-plugin-import": "^2.28.1",
+		"eslint": "^8.52.0",
+		"eslint-plugin-import": "^2.29.0",
 		"eslint-plugin-import-quotes": "^0.0.1"
 	},
 	"main": "index.js",
-	"name": "@robertakarobin/eslint-config"
+	"name": "@robertakarobin/eslint-config",
+	"version": "0.0.1"
 }
