--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
 	"devDependencies": {
-		"@robertakarobin/csslint": "file:./csslint",
-		"@robertakarobin/emit": "file:./emit",
-		"@robertakarobin/eslint-config-ts": "file:./eslint-config-ts",
-		"@robertakarobin/spec": "file:./spec",
-		"@robertakarobin/web": "file:./web",
+		"@robertakarobin/csslint": "^0.0.1",
+		"@robertakarobin/emit": "^0.0.1",
+		"@robertakarobin/eslint-config-ts": "^0.0.1",
+		"@robertakarobin/spec": "^0.0.1",
+		"@robertakarobin/web": "^0.0.1",
+		"diff": "^5.1.0",
 		"esbuild": "^0.19.5",
 		"husky": "^8.0.3",
 		"npm-check-updates": "^16.14.6",
