--- a/eslint-config-ts/package.json
+++ b/eslint-config-ts/package.json
@@ -1,6 +1,6 @@
 {
 	"dependencies": {
-		"@robertakarobin/eslint-config": "file:../eslint-config",
+		"@robertakarobin/eslint-config": "^0.0.1",
 		"@types/node": "^20.8.8",
 		"@typescript-eslint/eslint-plugin": "^6.9.0",
 		"@typescript-eslint/parser": "^6.9.0",
