--- a/web/package.json
+++ b/web/package.json
@@ -1,10 +1,10 @@
 {
 	"dependencies": {
-		"@robertakarobin/emit": "file:../emit",
-		"@robertakarobin/jsutil": "file:../jsutil"
+		"@robertakarobin/emit": "^0.0.1",
+		"@robertakarobin/jsutil": "^0.0.1"
 	},
 	"devDependencies": {
-		"@robertakarobin/spec": "file:../spec"
+		"@robertakarobin/spec": "^0.0.1"
 	},
 	"main": "index.ts",
 	"name": "@robertakarobin/web",
