--- a/eslint-config-ts/package.json
+++ b/eslint-config-ts/package.json
@@ -1,10 +1,13 @@
 {
 	"dependencies": {
 		"@robertakarobin/eslint-config": "^0.0.2",
-		"@types/node": "^20.8.9",
-		"@typescript-eslint/eslint-plugin": "^6.9.0",
-		"@typescript-eslint/parser": "^6.9.0",
+		"@types/node": "^20.8.10",
+		"@typescript-eslint/eslint-plugin": "^6.9.1",
+		"@typescript-eslint/parser": "^6.9.1",
 		"eslint-plugin-typescript-sort-keys": "^3.1.0"
+	},
+	"devDependencies": {
+		"@robertakarobin/eslint-config": "file:../eslint-config"
 	},
 	"main": "index.js",
 	"name": "@robertakarobin/eslint-config-ts",
