Add css cleaner

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"@robertakarobin/eslint-config-ts": "file:./eslint-config-ts",
 		"@robertakarobin/spec": "file:./spec",
 		"@robertakarobin/web": "file:./web",
+		"@types/clean-css": "^4.2.9",
 		"@types/pretty": "^2.0.2",
+		"clean-css": "^5.3.2",
 		"husky": "^8.0.3",
 		"npm-check-updates": "^16.14.6",
 		"pretty": "^2.0.0",
