Add tsc to npm run test

--- a/eslint-config-ts/tsconfig.json
+++ b/eslint-config-ts/tsconfig.json
@@ -5,8 +5,8 @@
 		"baseUrl": ".",
 		"experimentalDecorators": true,
 		"lib": ["ESNext", "DOM"],
-		"module": "ESNext",
-		"moduleResolution": "bundler",
+		"module": "NodeNext",
+		"moduleResolution": "NodeNext",
 		"noEmit": true,
 		"noEmitOnError": true,
 		"outDir": "dist",
