--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		"lint": "eslint . && npm run stylelint",
 		"spec": "tsx index.spec.ts",
 		"stylelint": "stylelint **/*.css --quietDeprecationWarnings",
-		"test": "npm run lint && npm run spec"
+		"test": "tsc && npm run lint && npm run spec"
 	},
 	"type": "module",
 	"version": "0.0.182"
