Add watch and serve

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"url": "https://github.com/RobertAKARobin/util"
 	},
 	"scripts": {
-		"dev": "tsx web/example/build.ts",
+		"dev": "tsx --watch web/example/build.ts",
 		"lint": "eslint . && npm run stylelint",
 		"spec": "tsx index.spec.ts",
 		"stylelint": "stylelint **/*.css --quietDeprecationWarnings",
