--- a/package.json
+++ b/package.json
@@ -15,11 +15,10 @@
 		"@robertakarobin/spec": "file:./spec",
 		"@robertakarobin/web": "file:./web",
 		"@types/clean-css": "^4.2.9",
-		"@types/pretty": "^2.0.2",
-		"clean-css": "^5.3.2",
+		"@types/js-beautify": "^1.14.2",
 		"husky": "^8.0.3",
+		"js-beautify": "^1.14.9",
 		"npm-check-updates": "^16.14.6",
-		"pretty": "^2.0.0",
 		"tsx": "^3.14.0"
 	},
 	"files": [
@@ -35,7 +34,8 @@
 		"url": "https://github.com/RobertAKARobin/util"
 	},
 	"scripts": {
-		"dev": "tsx --watch web/example/build.ts",
+		"dev": "tsx web/example/build.ts",
+		"dev:watch": "tsx --watch web/example/build.ts",
 		"lint": "eslint . && npm run stylelint",
 		"spec": "tsx index.spec.ts",
 		"stylelint": "stylelint **/*.css --quietDeprecationWarnings",
