--- a/web/package.json
+++ b/web/package.json
@@ -8,11 +8,14 @@
 	"devDependencies": {
 		"@robertakarobin/spec": "^0.0.2"
 	},
-	"main": "index.ts",
+	"main": "./dist/index.ts",
 	"name": "@robertakarobin/web",
 	"scripts": {
+		"build": "tsx ./build.ts",
+		"prepublishOnly": "npm run build",
 		"test": "tsx ./spec/run.ts"
 	},
 	"type": "module",
-	"version": "0.0.1"
+	"types": "types.d.ts",
+	"version": "0.0.2"
 }
