Update paths to use index.ts

--- a/web/example/package.json
+++ b/web/example/package.json
@@ -1,6 +1,6 @@
 {
-	"dependencies": {
-		"@robertakarobin/web": "file:.."
+	"devDependencies": {
+		"@robertakarobin/web": "^0.0.2"
 	},
 	"type": "module"
 }
