Flesh out web build process

--- a/web/example/package.json
+++ b/web/example/package.json
@@ -1,6 +1,8 @@
 {
 	"devDependencies": {
-		"@robertakarobin/web": "file:../"
+		"@robertakarobin/web": "file:../",
+		"@types/js-beautify": "^1.14.3",
+		"js-beautify": "^1.14.11"
 	},
 	"type": "module"
 }
