--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
 		"@robertakarobin/spec": "file:./spec",
 		"@robertakarobin/web": "file:./web",
 		"@types/clean-css": "^4.2.9",
-		"@types/js-beautify": "^1.14.3",
 		"husky": "^8.0.3",
-		"js-beautify": "^1.14.11",
 		"npm-check-updates": "^16.14.6",
 		"tsx": "^3.14.0"
 	},
@@ -34,9 +32,7 @@
 		"url": "https://github.com/RobertAKARobin/util"
 	},
 	"scripts": {
-		"dev": "tsx web/example/build.ts",
-		"dev:serve": "npm run dev:watch -- --serve",
-		"dev:watch": "tsx --watch web/example/build.ts",
+		"dev": "tsx web/example/build.ts -- --watch",
 		"lint": "eslint . && npm run stylelint",
 		"spec": "tsx index.spec.ts",
 		"stylelint": "stylelint **/*.css --quietDeprecationWarnings",
