--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,8 @@
 		"@robertakarobin/emit": "^0.0.3",
 		"@robertakarobin/jsutil": "^0.0.3",
 		"esbuild": "^0.19.5",
-		"glob": "^10.3.10"
+		"glob": "^10.3.10",
+		"marked": "^9.1.5"
 	},
 	"devDependencies": {
 		"@robertakarobin/spec": "^0.0.4"
