--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"url": "https://github.com/RobertAKARobin/util"
 	},
 	"scripts": {
+		"build": "tsx web/example/build.ts",
 		"dev": "tsx watch --watch-preserve-output --watch-path=web/example/src web/example/build.ts -- --serve",
 		"lint": "eslint . && npm run stylelint",
 		"spec": "tsx index.spec.ts",
