Fixing some dependencies

--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
 	"dependencies": {
 		"@robertakarobin/csslint": "^0.0.1",
-		"@robertakarobin/emit": "^0.0.1",
 		"@robertakarobin/eslint-config-ts": "^0.0.1",
 		"@robertakarobin/spec": "^0.0.1",
 		"@robertakarobin/web": "^0.0.1",
@@ -10,8 +9,8 @@
 	},
 	"devDependencies": {
 		"@robertakarobin/csslint": "file:./csslint",
-		"@robertakarobin/emit": "file:./emit",
 		"@robertakarobin/eslint-config-ts": "file:./eslint-config-ts",
+		"@robertakarobin/jsutil": "file:./jsutil",
 		"@robertakarobin/spec": "file:./spec",
 		"@robertakarobin/web": "file:./web",
 		"@types/clean-css": "^4.2.10",
