Add HTML validation

--- a/web/example/package.json
+++ b/web/example/package.json
@@ -1,8 +1,11 @@
 {
-	"devDependencies": {
-		"@robertakarobin/web": "file:../",
+	"dependencies": {
 		"@types/js-beautify": "^1.14.3",
+		"html-validate": "^8.7.2",
 		"js-beautify": "^1.14.11"
+	},
+	"devDependencies": {
+		"@robertakarobin/web": "file:../"
 	},
 	"type": "module"
 }
