--- a/web/package.json
+++ b/web/package.json
@@ -3,14 +3,15 @@
 		"@robertakarobin/jsutil": "^0.0.17",
 		"esbuild": "^0.19.8",
 		"glob": "^10.3.10",
+		"js-beautify": "^1.14.11",
 		"marked": "^11.0.0"
 	},
 	"devDependencies": {
 		"@robertakarobin/csslint": "^0.0.3",
+		"@robertakarobin/htmlvalidate": "^0.0.2",
 		"@robertakarobin/spec": "^0.0.10",
 		"@types/js-beautify": "^1.14.3",
-		"html-validate": "^8.7.3",
-		"js-beautify": "^1.14.11"
+		"html-validate": "^8.7.3"
 	},
 	"main": "./dist/index.js",
 	"name": "@robertakarobin/web",
