--- a/web/example/tsconfig.json
+++ b/web/example/tsconfig.json
@@ -2,7 +2,10 @@
 	"compilerOptions": {
 		"baseUrl": ".",
 		"noEmit": true,
-		"noEmitOnError": true
+		"noEmitOnError": true,
+		"paths": {
+			"@src/*": ["tmp/*", "src/*"]
+		}
 	},
 	"extends": [
 		"@robertakarobin/eslint-config-ts"
