--- a/web/example/package.json
+++ b/web/example/package.json
@@ -16,7 +16,7 @@
 		"lint:html": "html-validate dist",
 		"lint:ts": "eslint .",
 		"spec": "tsx spec/run.ts",
-		"test": "tsc -p tsconfig.json && npm run build && npm run lint && npm run spec"
+		"test": "tsc -p tsconfig.json && npm run spec && npm run lint"
 	},
 	"type": "module"
 }
