--- a/eslint-config-ts/package.json
+++ b/eslint-config-ts/package.json
@@ -1,12 +1,13 @@
 {
 	"dependencies": {
-		"@robertakarobin/eslint-config": "^0.0.7",
-		"@types/node": "^20.10.1",
+		"@robertakarobin/eslint-config": "^0.0.10",
+		"@types/node": "^20.10.2",
 		"@typescript-eslint/eslint-plugin": "^6.13.1",
 		"@typescript-eslint/parser": "^6.13.1",
 		"eslint-plugin-typescript-sort-keys": "^3.1.0"
 	},
 	"main": "index.js",
 	"name": "@robertakarobin/eslint-config-ts",
-	"version": "0.0.9"
+	"scripts": {},
+	"version": "0.0.12"
 }
