--- a/eslint-config/package.json
+++ b/eslint-config/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
+		"@stylistic/eslint-plugin": "^1.4.1",
 		"eslint": "^8.54.0",
 		"eslint-plugin-import": "^2.29.0",
 		"eslint-plugin-import-newlines": "^1.3.4",
@@ -7,5 +8,6 @@
 	},
 	"main": "index.js",
 	"name": "@robertakarobin/eslint-config",
-	"version": "0.0.7"
+	"scripts": {},
+	"version": "0.0.10"
 }
