--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
 		"**/dist-golden/*",
 		"**/node_modules/*",
 		"**/tmp/*",
-		"**/package-lock.json"
+		"**/package-lock.json",
+		"**/web/example"
 	]
 }
