--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
 		"esbuild": "^0.19.8",
 		"glob": "^10.3.10",
 		"js-beautify": "^1.14.11",
+		"jsdom": "^23.0.1",
 		"marked": "^11.0.0"
 	},
 	"devDependencies": {
@@ -10,6 +11,7 @@
 		"@robertakarobin/htmlvalidate": "^0.0.2",
 		"@robertakarobin/jsutil": "file:../jsutil",
 		"@types/js-beautify": "^1.14.3",
+		"@types/jsdom": "^21.1.6",
 		"html-validate": "^8.7.3"
 	},
 	"main": "./dist/index.js",
