--- a/web/example/tsconfig.json
+++ b/web/example/tsconfig.json
@@ -4,7 +4,7 @@
 		"noEmit": true,
 		"noEmitOnError": true,
 		"paths": {
-			"@src/*": ["tmp/*", "src/*"]
+			"@src/*": ["src/*"]
 		}
 	},
 	"extends": [
