Revert "Rm formattssource"
This reverts commit c3a4a772ea7d10be2fc40be348cbd8c94421abbf.

--- a/web/example/tsconfig.json
+++ b/web/example/tsconfig.json
@@ -4,7 +4,7 @@
 		"noEmit": true,
 		"noEmitOnError": true,
 		"paths": {
-			"@src/*": ["src/*"]
+			"@src/*": ["tmp/*", "src/*"]
 		}
 	},
 	"extends": [
