--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,6 @@
 {
 	"dependencies": {
+		"@robertakarobin/jsutil": "file:../jsutil",
 		"esbuild": "^0.19.8",
 		"glob": "^10.3.10",
 		"js-beautify": "^1.14.11",
@@ -7,12 +8,8 @@
 		"marked": "^11.0.0"
 	},
 	"devDependencies": {
-		"@robertakarobin/csslint": "^0.0.3",
-		"@robertakarobin/htmlvalidate": "^0.0.2",
-		"@robertakarobin/jsutil": "file:../jsutil",
 		"@types/js-beautify": "^1.14.3",
-		"@types/jsdom": "^21.1.6",
-		"html-validate": "^8.7.3"
+		"@types/jsdom": "^21.1.6"
 	},
 	"main": "./dist/index.js",
 	"name": "@robertakarobin/web",
