add husky to prepare script

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"build": "npm run build --prefix web/example",
 		"dev": "npm run dev --prefix web/example",
 		"lint": "eslint .",
+		"prepare": "husky install",
 		"spec": "tsx index.spec.ts && npm run test --prefix web/example",
 		"test": "npm run lint && npm run spec"
 	},
